exports[`It should render the display of button in the screen 1`] = `
<div
  className="main-frame"
>

  <h1>
    Math Magician
  </h1>
  <h2>
    Let us do some basic Mathematics Operation
  </h2>
  <div
    className="main"
  >
    <div
      className="calculator"
    >
      <div
        className="screen"
      >
        0
      </div>
      <div
        className="first row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="color"
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
      </div>
      <div
        className="second row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="color"
          onClick={[Function]}
          type="button"
        >
          x
        </button>
      </div>
      <div
        className="third row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="buttoncolor"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
      </div>
      <div
        className="fourth row"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="butoncolor"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
      <div
        className="fifth row"
      >
        <button
          className="zero"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          .
        </button>
        <button
          className="buttoncolor"
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`It should render the value on the screen`] = `
<div
 className="main-frame"
 >
      <h1>
    Math Magician
  </h1>
  <h2>
    Let us do some basic Mathematics Operation
  </h2>
  <div
    className="main"
  >
    <div
      className="calculator"
    >
      <div
        className="screen"
      >
        0
      </div>
          <div
           className="first row"
           >
            <button
             type="button"
             onClick={handleClick}
             >
             AC
             </button>
            <button
            type="button"
            onClick={handleClick}
            >
            +/-
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            %
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="color"
            >
            ÷
            </button>
          </div>
          <div
          className="second row"
          >
            <button
            type="button"
            onClick={handleClick}
            >
            7
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            8
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            9
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="buttoncolor"
            >
            x
            </button>
          </div>
          <div
          className="third row"
          >
               <button
            type="button"
            onClick={handleClick}
            >
            4
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            5
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            6
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="buttoncolor"
            >
            -
            </button>
          </div>
          <div
          className="fourth row"
          >
               <button
            type="button"
            onClick={handleClick}
            >
            1
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            2
            </button>
            <button
            type="button"
            onClick={handleClick}
            >
            3
            </button>
            <button
            type="button"
            onClick={handleClick}
            className="buttoncolor"
            >
            +
            </button>
          </div>
          <div
           className="fifth row"
           >
            <button
             type="button"
              onClick={handleClick}
               className="zero"
               >
               0
               </button>
            <button
             type="button"
              onClick={handleClick}
              >
              .
              </button>
            <button
             type="button"
              onClick={handleClick}
               className="buttoncolor"
               >
               =
               </button>
          </div>
        </div>
      </div>
</div>`;